# hive-game

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python.yml
backend/: .gitignore  Makefile  README.md  pyproject.toml
backend/src/api/: __init__.py  main.py  models.py  router.py  schemas.py
backend/src/hive/: board.py  game.py  rules.py
backend/src/hive/behaviors/: __init__.py  ant.py  beetle.py  grasshopper.py  queen.py  spider.py
backend/src/hive/models/: bug.py
backend/tests/: test_board.py  test_game.py  test_rules.py
backend/tests/behaviors/: test_ant.py  test_beetle.py  test_behavior_dispatch.py  test_queen.py
backend/tests/models/: test_bug.py  test_position.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.tsx  game.ts  index.tsx
frontend/src/components/: Board.tsx  BugPicker.tsx  Cell.tsx  GameOverBanner.tsx  RulesPanel.tsx
frontend/src/styles/: App.css  Board.css  BugPicker.css  Cell.css  GameOverBanner.css  RulesPanel.css  index.css
src/hive/: __init__.py  board.py  game.py  position.py
src/hive/behaviors/: __init__.py  ant.py  base.py  beetle.py  grasshopper.py  queen.py  spider.py
src/hive/models/: bug.py  bugtype.py  player.py  position.py
tests/: test_behavior.py  test_board.py  test_game.py
tests/behaviors/: test_ant.py  test_behavior_dispatch.py  test_grasshopper.py  test_queen.py  test_spider.py
tests/models/: test_bug.py  test_player.py
