[project]
name = "hive"
version = "0.1.0"
description = "Full-stack Hive game with Python backend and React frontend"
authors = [
    {name = "Estuardo Lopez Letona",email = "elopezle@andrew.cmu.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "hive", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
