[project]
name = "hive"
version = "0.1.0"
description = "Full-stack Hive game with Python backend and React frontend"
authors = [
    {name = "Estuardo Lopez Letona",email = "elopezle@andrew.cmu.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [
  { include = "hive", from = "src" },
  { include = "api", from = "src" }
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.8"
uvicorn = {extras = ["standard"], version = "^0.34.2"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

lint.select = [
  "F",      # pyflakes (default)
  "E", "W", # pycodestyle (default)
  "I",      # isort (default)
  "N",      # pep8-naming
  "D",      # pydocstyle (docstrings)
  "B",      # flake8-bugbear (common bugs / bad practices)
  "C4",     # flake8-comprehensions
  "ERA",    # eradicate (remove commented-out code)
  "PL",     # pylint-style rules
  "UP",     # pyupgrade (Python 3 idioms)
]

lint.ignore = [
  "D107",   # don't require docstrings on __init__
  "D203",   # conflicting docstring formatting rules
  "D212",   # ignore first-line summary rule
  "D413",   # allow no blank line after "Returns" section
  "D100",   # allow no docstring in public module
  "D401",   # allows docstring to not be in imperative mood
  "PLW0603" # allows using global to update global vars
]
